deployments/k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: dojo
spec:
  selector:
    app: api                       # pointe vers les pods avec le label app=api
  ports:
    - port: 80                     # port exposé dans le cluster
      targetPort: 8000             # port du conteneur
  type: ClusterIP                  # accessible uniquement depuis l'intérieur du cluster
